--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-ultralytics
-torch
-torchvision
-streamlit
-opencv-python-headless
-numpy
-matplotlib
+streamlit==1.35.0
+ultralytics==8.2.0
+torch==2.2.2
+torchvision==0.17.2
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+matplotlib==3.8.4
+
+
 
